--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(calculatePopLogml)
 export(computeRows)
 export(learn_simple_partition)
 export(ownNum2Str)
-export(randga)
+export(randdir)
 export(repmat)
 importFrom(stats,runif)
