--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: rBAPS
 Title: Bayesian Analysis of Population Structure
 Version: 0.0.0.9000
+Date: 2020-01-14
 Authors@R:
     c(
         person(
