--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(admix1)
 export(calculatePopLogml)
+export(computeIndLogml)
 export(computeRows)
 export(learn_simple_partition)
 export(ownNum2Str)
