--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(admix1)
 export(calculatePopLogml)
 export(computeIndLogml)
 export(computeRows)
+export(etsiParas)
+export(laskeMuutokset4)
 export(learn_simple_partition)
 export(ownNum2Str)
 export(proportion2str)
+export(rand)
 export(randdir)
 export(repmat)
 export(suoritaMuutos)
+export(times)
 importFrom(stats,runif)
