Added function with minimal testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(admix1)
 export(calculatePopLogml)
 export(colon)
 export(computeIndLogml)
+export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
 export(laskeMuutokset4)
