--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(proportion2str)
 export(rand)
 export(randdir)
 export(repmat)
+export(simulateIndividuals)
 export(simuloiAlleeli)
 export(suoritaMuutos)
 export(times)
