Fixed handling of empty x argument

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(repmat)
 export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
+export(size)
 export(suoritaMuutos)
 export(times)
 importFrom(stats,runif)
