--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(etsiParas)
 export(laskeMuutokset4)
 export(learn_simple_partition)
 export(ownNum2Str)
+export(poistaLiianPienet)
 export(proportion2str)
 export(rand)
 export(randdir)
