Fixes to documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(computeIndLogml)
 export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
+export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
 export(ownNum2Str)
@@ -20,6 +21,7 @@ export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
 export(size)
+export(strcmp)
 export(suoritaMuutos)
 export(times)
 importFrom(stats,runif)
