Added inputdlg homonymous

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(computeIndLogml)
 export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
+export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
