--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,5 +26,6 @@ export(size)
 export(strcmp)
 export(suoritaMuutos)
 export(times)
+export(uigetfile)
 importFrom(methods,is)
 importFrom(stats,runif)
