Minor documentation updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
 export(proportion2str)
+export(questdlg)
 export(rand)
 export(randdir)
 export(repmat)
