--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,5 +28,6 @@ export(strcmp)
 export(suoritaMuutos)
 export(times)
 export(uigetfile)
+export(uiputfile)
 importFrom(methods,is)
 importFrom(stats,runif)
