Added bare-bones greedyMix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(computeIndLogml)
 export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
+export(greedyMix)
 export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
