--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(simuloiAlleeli)
 export(size)
 export(strcmp)
 export(suoritaMuutos)
+export(testaaOnkoKunnollinenBapsData)
 export(times)
 export(uigetfile)
 export(uiputfile)
