--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(questdlg)
 export(rand)
 export(randdir)
 export(repmat)
+export(rivinSisaltamienMjonojenLkm)
 export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
@@ -28,8 +29,10 @@ export(size)
 export(strcmp)
 export(suoritaMuutos)
 export(testaaOnkoKunnollinenBapsData)
+export(testaaPop)
 export(times)
 export(uigetfile)
 export(uiputfile)
 importFrom(methods,is)
 importFrom(stats,runif)
+importFrom(utils,read.delim)
