Added bare-bones lueGenePopData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
+export(lueGenePopData)
 export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
