--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
 export(lueGenePopData)
+export(lueNimi)
 export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
