--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(rand)
 export(randdir)
 export(repmat)
 export(rivinSisaltamienMjonojenLkm)
+export(selvitaDigitFormat)
 export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
