--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(simuloiAlleeli)
 export(size)
 export(strcmp)
 export(suoritaMuutos)
+export(takeLine)
 export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
 export(times)
