Translated logml2String

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
+export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
 export(noIndex)
