--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(testaaPop)
 export(times)
 export(uigetfile)
 export(uiputfile)
+export(writeMixtureInfo)
 importFrom(methods,is)
 importFrom(stats,runif)
 importFrom(utils,read.delim)
