--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
 export(greedyMix)
+export(handleData)
 export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
