--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(computeRows)
 export(etsiParas)
 export(greedyMix)
 export(handleData)
+export(initPopNames)
 export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
