--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
 export(learn_simple_partition)
+export(linkage)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
