--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(computeIndLogml)
 export(computePersonalAllFreqs)
 export(computeRows)
 export(etsiParas)
+export(fgetl)
+export(fopen)
 export(greedyMix)
 export(handleData)
 export(initPopNames)
@@ -21,6 +23,7 @@ export(linkage)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
+export(min_MATLAB)
 export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
