Improvements to setdiff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(randdir)
 export(repmat)
 export(rivinSisaltamienMjonojenLkm)
 export(selvitaDigitFormat)
+export(setdiff_MATLAB)
 export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
