--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(linkage)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
+export(max_MATLAB)
 export(min_MATLAB)
 export(noIndex)
 export(ownNum2Str)
