--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(linkage)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
+export(matlab2r)
 export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
@@ -49,3 +50,4 @@ export(writeMixtureInfo)
 importFrom(methods,is)
 importFrom(stats,runif)
 importFrom(utils,read.delim)
+importFrom(utils,write.table)
