--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(initPopNames)
 export(inputdlg)
 export(isfield)
 export(laskeMuutokset4)
+export(learn_partition_modified)
 export(learn_simple_partition)
 export(linkage)
 export(logml2String)
@@ -47,6 +48,7 @@ export(times)
 export(uigetfile)
 export(uiputfile)
 export(writeMixtureInfo)
+import(utils)
 importFrom(methods,is)
 importFrom(stats,runif)
 importFrom(utils,read.delim)
