--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(laskeMuutokset4)
 export(learn_partition_modified)
 export(learn_simple_partition)
 export(linkage)
+export(load_fasta)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
