Minor changes for clean check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,10 @@ export(uigetfile)
 export(uiputfile)
 export(writeMixtureInfo)
 import(utils)
+importFrom(ape,as.DNAbin)
+importFrom(ape,read.FASTA)
 importFrom(methods,is)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(utils,read.delim)
 importFrom(utils,write.table)
