--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,3 +57,4 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,read.delim)
 importFrom(utils,write.table)
+importFrom(vcfR,read.vcfR)
