--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(uigetfile)
 export(uiputfile)
 export(writeMixtureInfo)
 import(utils)
+importFrom(Rsamtools,scanBam)
 importFrom(ape,as.DNAbin)
 importFrom(ape,read.FASTA)
 importFrom(methods,is)
