--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,9 +36,8 @@ Description: Partial R implementation of the BAPS software
 License: GPL-3
 BugReports: https://github.com/ocbe-uio/rBAPS/issues
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.1
 Suggests:
     testthat (>= 2.1.0)
 Imports:
-    methods, ape, vcfR
+    methods, ape, vcfR, Rsamtools
