Opening CI for all branches
Particularly useful for temporary branches like this one, that should be squashed and merged once CI is fixed.

--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -10,12 +10,7 @@
 # Determines when the action is triggered                  #
 # ======================================================== #
 
-on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
-
+on: [push, pull_request]
 name: R-CMD-check
 
 # ======================================================== #
