--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -48,7 +48,7 @@ jobs:
         # Querying dependencies ---------------------------------- #
         - name: Querying dependencies
           run: |
-            install.packages('remotes')
+            install.packages(c("remotes", "covr"))
             saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
             writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
           shell: Rscript {0}
