--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -48,7 +48,7 @@ jobs:
         # Querying dependencies ---------------------------------- #
         - name: Querying dependencies
           run: |
-            install.packages(c("remotes", "covr"))
+            install.packages("remotes")
             saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
             writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
           shell: Rscript {0}
@@ -91,7 +91,9 @@ jobs:
 
         # Checking unit test coverage ---------------------------- #
         - name: Checking unit test coverage
-          run: covr::codecov()
+          run: |
+            install.packages("covr")
+            covr::codecov()
           shell: Rscript {0}
 
         # Uploading check results -------------------------------- #
