--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -110,7 +110,8 @@ jobs:
               pipe_continuation_linter, semicolon_terminator_linter,
               single_quotes_linter, spaces_inside_linter,
               trailing_blank_lines_linter, trailing_whitespace_linter,
-              undesirable_function_linter, undesirable_operator_linter
+              undesirable_function_linter, undesirable_operator_linter,
+              unneeded_concatenation_linter
             ) # TODO: expand style rules as package matures
             lint_package(linters = style_rules)
           shell: Rscript {0}
