Adding adegenet to imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export(uiputfile)
 export(writeMixtureInfo)
 import(utils)
 importFrom(Rsamtools,scanBam)
+importFrom(adegenet,.readExt)
+importFrom(adegenet,read.genepop)
 importFrom(ape,as.DNAbin)
 importFrom(ape,read.FASTA)
 importFrom(methods,is)
