--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,4 +40,4 @@ RoxygenNote: 7.1.2
 Suggests:
     testthat (>= 2.1.0)
 Imports:
-    methods, ape, vcfR, Rsamtools
+    methods, ape, vcfR, Rsamtools, adegenet
