Removed docs from matlab2r files (#21)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,7 @@
 
 export(addAlleles)
 export(admix1)
-export(blanks)
 export(calculatePopLogml)
-export(colon)
 export(computeAllFreqs2)
 export(computeIndLogml)
 export(computePersonalAllFreqs)
@@ -15,8 +13,6 @@ export(fopen)
 export(greedyMix)
 export(handleData)
 export(initPopNames)
-export(inputdlg)
-export(isfield)
 export(laskeMuutokset4)
 export(learn_partition_modified)
 export(learn_simple_partition)
@@ -25,29 +21,20 @@ export(load_fasta)
 export(logml2String)
 export(lueGenePopData)
 export(lueNimi)
-export(matlab2r)
 export(noIndex)
 export(ownNum2Str)
 export(poistaLiianPienet)
 export(proportion2str)
-export(questdlg)
-export(rand)
 export(randdir)
-export(repmat)
 export(rivinSisaltamienMjonojenLkm)
 export(selvitaDigitFormat)
 export(simulateAllFreqs)
 export(simulateIndividuals)
 export(simuloiAlleeli)
-export(size)
-export(strcmp)
 export(suoritaMuutos)
 export(takeLine)
 export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
-export(times)
-export(uigetfile)
-export(uiputfile)
 export(writeMixtureInfo)
 import(utils)
 importFrom(Rsamtools,scanBam)
@@ -55,9 +42,27 @@ importFrom(adegenet,.readExt)
 importFrom(adegenet,read.genepop)
 importFrom(ape,as.DNAbin)
 importFrom(ape,read.FASTA)
+importFrom(matlab2r,blanks)
+importFrom(matlab2r,cell)
+importFrom(matlab2r,colon)
+importFrom(matlab2r,inputdlg)
+importFrom(matlab2r,isempty)
+importFrom(matlab2r,isfield)
+importFrom(matlab2r,isspace)
+importFrom(matlab2r,max)
+importFrom(matlab2r,min)
+importFrom(matlab2r,ones)
+importFrom(matlab2r,rand)
+importFrom(matlab2r,repmat)
+importFrom(matlab2r,reshape)
+importFrom(matlab2r,size)
+importFrom(matlab2r,sortrows)
+importFrom(matlab2r,squeeze)
+importFrom(matlab2r,strcmp)
+importFrom(matlab2r,times)
+importFrom(matlab2r,zeros)
 importFrom(methods,is)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,read.delim)
-importFrom(utils,write.table)
 importFrom(vcfR,read.vcfR)
