Resolved conflicts involving homonymous functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,6 @@ export(takeLine)
 export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
 export(writeMixtureInfo)
-import(utils)
 importFrom(Rsamtools,scanBam)
 importFrom(adegenet,.readExt)
 importFrom(adegenet,read.genepop)
@@ -45,6 +44,7 @@ importFrom(ape,read.FASTA)
 importFrom(matlab2r,blanks)
 importFrom(matlab2r,cell)
 importFrom(matlab2r,colon)
+importFrom(matlab2r,find)
 importFrom(matlab2r,inputdlg)
 importFrom(matlab2r,isempty)
 importFrom(matlab2r,isfield)
