--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@
 # ======================================================== #
 
 on: [push, pull_request]
-name: R-CMD-check
+name: package-build
 
 # ======================================================== #
 # Determine actions to take                                #
@@ -87,33 +87,6 @@ jobs:
           run: |
             options(crayon.enabled = TRUE)
             rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
-          shell: Rscript {0}
-
-        # Checking unit test coverage ---------------------------- #
-        - name: Checking unit test coverage
-          run: |
-            install.packages("covr")
-            covr::codecov()
-          shell: Rscript {0}
-
-        # Judging coding style ----------------------------------- #
-        - name: Linting package
-          run: |
-            install.packages("lintr")
-            library(lintr)
-            style_rules <- list(
-              assignment_linter, closed_curly_linter, commas_linter,
-              todo_comment_linter, equals_na_linter,
-              function_left_parentheses_linter, infix_spaces_linter,
-              line_length_linter, no_tab_linter, open_curly_linter,
-              paren_brace_linter, absolute_path_linter, nonportable_path_linter,
-              pipe_continuation_linter, semicolon_terminator_linter,
-              single_quotes_linter, spaces_inside_linter,
-              trailing_blank_lines_linter, trailing_whitespace_linter,
-              undesirable_function_linter, undesirable_operator_linter,
-              unneeded_concatenation_linter
-            ) # TODO: expand style rules as package matures
-            lint_package(linters = style_rules)
           shell: Rscript {0}
 
         # Uploading check results -------------------------------- #
