--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(matlab2r,isspace)
 importFrom(matlab2r,max)
 importFrom(matlab2r,min)
 importFrom(matlab2r,ones)
+importFrom(matlab2r,questdlg)
 importFrom(matlab2r,rand)
 importFrom(matlab2r,repmat)
 importFrom(matlab2r,reshape)
