--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(fgetl)
 export(fopen)
 export(greedyMix)
 export(handleData)
+export(handlePopData)
 export(initPopNames)
 export(laskeMuutokset4)
 export(learn_partition_modified)
