Added function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(linkage)
 export(load_fasta)
 export(logml2String)
 export(lueGenePopData)
+export(lueGenePopDataPop)
 export(lueNimi)
 export(noIndex)
 export(ownNum2Str)
