--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(takeLine)
 export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
 export(writeMixtureInfo)
+export(writeMixtureInfoPop)
 importFrom(Rsamtools,scanBam)
 importFrom(adegenet,.readExt)
 importFrom(adegenet,read.genepop)
