Syntax fixes, added documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(etsiParas)
 export(fgetl)
 export(fopen)
 export(greedyMix)
+export(greedyPopMix)
 export(handleData)
 export(handlePopData)
 export(initPopNames)
@@ -64,6 +65,7 @@ importFrom(matlab2r,sortrows)
 importFrom(matlab2r,squeeze)
 importFrom(matlab2r,strcmp)
 importFrom(matlab2r,times)
+importFrom(matlab2r,uiputfile)
 importFrom(matlab2r,zeros)
 importFrom(methods,is)
 importFrom(stats,runif)
