--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
           - {os: ubuntu-latest, r: 'release'}
           - {os: ubuntu-latest, r: 'devel'}
     steps:
+        - name: Retrieving current month
+          if: runner.os == 'Linux'
+          run: echo "CURRENT_MONTH=$(date +%m)" >> $GITHUB_ENV
 
         # Checking out code -------------------------------------- #
         - name: Checking out the repository
@@ -72,24 +75,18 @@ jobs:
             done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
 
         # Installing package dependencies ------------------------ #
-        - name: Installing package dependencies (release)
-          if: ${{ matrix.config.r == 'release' }}
+        - name: Installing package dependencies
+          if: ${{ env.CURRENT_MONTH < 4 || env.CURRENT_MONTH > 10 }}
           run: |
             remotes::install_cran(c("rcmdcheck", "BiocManager"))
             BiocManager::install("GenomicRanges")
             BiocManager::install("Rsamtools")
             remotes::install_deps(dependencies = TRUE)
           shell: Rscript {0}
-        - name: Installing package dependencies (devel)
-          if: ${{ matrix.config.r == 'devel' }}
-          run: |
-            remotes::install_cran(c("rcmdcheck", "BiocManager"))
-            remotes::install_deps(dependencies = TRUE)
-            BiocManager::install(version = "devel")
-          shell: Rscript {0}
 
         # Checking package --------------------------------------- #
         - name: Checking package
+          if: ${{ env.CURRENT_MONTH < 4 || env.CURRENT_MONTH > 10 }}
           env:
             _R_CHECK_CRAN_INCOMING_REMOTE_: false
           run: |
