Refactored `laskeMuutokset4()` as an R6 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(greedyPopMix)
 export(handleData)
 export(handlePopData)
 export(initPopNames)
-export(laskeMuutokset4)
 export(learn_partition_modified)
 export(learn_simple_partition)
 export(linkage)
@@ -40,6 +39,7 @@ export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
 export(writeMixtureInfo)
 export(writeMixtureInfoPop)
+importFrom(R6,R6Class)
 importFrom(Rsamtools,scanBam)
 importFrom(adegenet,.readExt)
 importFrom(adegenet,read.genepop)
