--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(ape,read.FASTA)
 importFrom(matlab2r,blanks)
 importFrom(matlab2r,cell)
 importFrom(matlab2r,colon)
+importFrom(matlab2r,disp)
 importFrom(matlab2r,find)
 importFrom(matlab2r,inputdlg)
 importFrom(matlab2r,isempty)
