--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(simulateIndividuals)
 export(simuloiAlleeli)
 export(suoritaMuutos)
 export(takeLine)
+export(testaaKoordinaatit)
 export(testaaOnkoKunnollinenBapsData)
 export(testaaPop)
 export(writeMixtureInfo)
