Translated findCliques() + subfunctions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,3 +74,4 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(utils,read.delim)
 importFrom(vcfR,read.vcfR)
+importFrom(zeallot,"%<-%")
