Translated minimum_spanning_tree() (#3)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(matlab2r,isfield)
 importFrom(matlab2r,isspace)
 importFrom(matlab2r,max)
 importFrom(matlab2r,min)
+importFrom(matlab2r,nargin)
 importFrom(matlab2r,ones)
 importFrom(matlab2r,questdlg)
 importFrom(matlab2r,rand)
