Adding matlab2r::log2 to NAMESPACE
Checks will continue to fail until matlab2r::log2() is on CRAN. In the
meantime, one could use the function from the development version:

install_github("ocbe-uio/matlab2r")

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ importFrom(matlab2r,inputdlg)
 importFrom(matlab2r,isempty)
 importFrom(matlab2r,isfield)
 importFrom(matlab2r,isspace)
+importFrom(matlab2r,log2)
 importFrom(matlab2r,max)
 importFrom(matlab2r,min)
 importFrom(matlab2r,nargin)
